styles/guided-tutorial.less
    .endpoint-container {
        display: flex;
        align-items: flex-end;
    }
    .endpoint-text {
        font-weight: 500;
        font-size: 15px;
        line-height: 18px;
        margin-right: 10px;
    }
    .endpoint-link {
        margin-left: 10px;

        color: white;
        background-color: #4C7D7D;
        padding: 3px 8px;
        border-radius: 3px;

        font-family: 'Courier New';
        font-style: normal;
        font-weight: 700;
        font-size: 12px;
        line-height: 14px;
    }
    .block-requirements {
        background-color: #F1F4F9;
        padding: 23px;
        margin-top: 40px;
        display: flex;
        flex-direction: column;
        align-items: center;

        font-size: 18px;
        line-height: 24px;

        color: #677688;
    }
    .block-requirements-headline {
        font-weight: 500;
        margin-bottom: 13px;
    }
    .block-requirements-row {
        display: flex;
        justify-content: space-between;
        gap: 60px;
    }
    .block-requirements-steps {
        display: flex;
        flex-direction: column;
        justify-content: center;
        font-weight: 500;
    }
    .block-requirements-steps a {
        font-weight: 400;
        margin-left: 9px;
    }

    .block-next-steps {
        padding: 20px 50px;
        display: flex;

        font-size: 16px;
        line-height: 24px;

        background-color: #F1F4F9;
        color: #677688;
        border-radius: 5px;
    }
    .block-next-steps.block-next-steps-main {
        flex-direction: column;
        align-items: center;
        padding-bottom: 25px;
    }
    .block-next-steps.block-next-steps-alt {
        align-items: center;
    }
    .block-next-steps img {
        margin-right: 50px;
    }
    .block-next-steps-column {
        display: flex;
        flex-direction: column;
    }
    .block-next-steps-title {
        color: #414D97;
        text-transform: uppercase;
        font-weight: 700;
        font-size: 34px;
        line-height: 41px;
        margin-bottom: 20px;

        @media (max-width: @screen-xs-max) {
            text-align: center;
        }
    }
    .block-next-steps.block-next-steps-main .block-next-steps-text {
        margin-bottom: 30px;
        font-weight: 400;
    }
    .block-next-steps.block-next-steps-alt .block-next-steps-text {
        margin-bottom: 11px;
    }
    .block-next-steps ul {
        margin: 0;
        padding: 0;
        list-style-type: none;
    }

    .next-steps-button {
        width: 261px;
        height: 89px;
        padding-top: 5px; /* Fix font not centered */
        display: flex;
        justify-content: center;
        align-items: center;
        gap: 10px;

        cursor: pointer;

        font-weight: 500;
        font-size: 24px;
        line-height: 29px;
        text-transform: uppercase;

        background-color: #414D97;
        color: #F1F4F9;

        box-shadow: 0px 0px 6px rgba(37, 38, 52, 0.5);
        border: none;
        border-radius: 57px;
    }
    .next-steps-button:hover {
        background-color: #2D366D;
        text-decoration: none;
        color: #F1F4F9;
    }

    .next-steps-button-number {
        padding-top: 2px;  /* Fix inability to align-item baseline */
        font-size: 63px;
    }
    .next-steps-button-smaller .next-steps-button-number {
        padding-top: 4px;  /* Fix inability to align-item baseline */
    }

    .next-steps-button-text {
        text-align: left;
    }

    .next-steps-button-smaller {
        width: 177px;
        height: 65px;
        padding-top: 3px
    }

    .next-steps-button-smaller {
        padding-top: 3px
    }

    .next-steps-button-smaller .next-steps-button-number {
        font-size: 48px;
    }

    .next-steps-button-smaller .next-steps-button-text {
        font-size: 18px;
        line-height: 22px;
    }

    .back-button button {
        box-sizing: border-box;

        padding: 4px 12px;
        margin-top: 70px;

        background: #FFFFFF;

        border: 1px solid #414D97;
        border-radius: 19px;

        line-height: 19px;
        display: flex;
        align-items: center;
        text-transform: uppercase;

        color: #414D97;
    }

    .publish-app-button button{
        box-sizing: border-box;

        padding: 4px 12px;
        margin: 14px 14px 0 0;

        background: #FFFFFF;

        border: 1px solid #414D97;
        border-radius: 19px;

        line-height: 19px;
        display: flex;
        align-items: center;
        text-transform: uppercase;

        color: #414D97;
        img {
            margin-left: 10px;
            padding-bottom: 3px;
        }
    }

    .back-button button:hover, .publish-app-button button:hover {
        background-color: #F1F4F9;
    }

    .back-button:hover, .publish-app-button:hover {
       text-decoration: none;
    }

    .tag-container, .tag-container-xs {
        margin-top: 27px;
    }
    .tag-container td, .tag-container-xs td {
        padding-bottom: 13px;
    }
    .tag-container td:first-child {
        width: 113px;
        font-size: 15px;
        font-weight: 500;
    }
    .tag-container-xs td:first-child {
        width: 75px;
        font-size: 15px;
        font-weight: 500;
    }

    .tag-selectable, .tag-not-selectable {
        box-sizing: border-box;

        display: flex;
        flex-direction: row;
        justify-content: left;
        align-items: center;

        padding: 0px 8px 0px 0px;
        gap: 8px;

        background: #FFFFFF;

        border: 0.5px solid #8C9AAF;
        border-radius: 3px;

        width: fit-content;
    }

    .tag-color {
        width: 6px;
        height: 20px;

        border-width: 0.5px 0px 0.5px 0.5px;
        border-style: solid;
        border-radius: 3px 0px 0px 3px;
    }

    .tag-color-light-blue {
        background-color: #4CA8E0;
        border-color: #4CA8E0;
    }
/* ... */

